Renamed package to com.azure.encryption.cosmos to fix package resolution