@@ -36,11 +36,20 @@ Licensed under the MIT License.
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <jacoco.min.linecoverage>0.10</jacoco.min.linecoverage>
-    <jacoco.min.branchcoverage>0.10</jacoco.min.branchcoverage>
+    <jacoco.min.branchcoverage>0.05</jacoco.min.branchcoverage>
 
     <!-- CosmosSkip - This is not a module we want/expect external customers to consume. Skip breaking API checks. -->
     <!-- This can only be enabled once we release GA, as it needs a stable version to check for breaking changes. -->
     <revapi.skip>true</revapi.skip>
+
+    <!-- Configures the Java 9+ run to perform the required module exports, opens, and reads that are necessary for testing but shouldn't be part of the module-info. -->
+    <javaModulesSurefireArgLine>
+      --add-opens com.azure.encryption.cosmos/com.azure.encryption.cosmos=ALL-UNNAMED
+      --add-opens com.azure.encryption.cosmos/com.azure.encryption.cosmos.implementation=ALL-UNNAMED
+      --add-opens com.azure.encryption.cosmos/com.azure.encryption.cosmos.keyprovider=ALL-UNNAMED
+      --add-opens com.azure.encryption.cosmos/com.azure.encryption.cosmos.util=ALL-UNNAMED
+      --add-opens com.azure.encryption.cosmos/com.azure.encryption.cosmos.models=ALL-UNNAMED
+    </javaModulesSurefireArgLine>
   </properties>
 
   <dependencies>
